--- a/apache/vhost/vhost.conf
+++ b/apache/vhost/vhost.conf
@@ -5,4 +5,19 @@
     DocumentRoot /var/www/
     ErrorLog /var/log/apache2/error.log
     CustomLog /var/log/apache2/access.log combined
+
+    ProxyPass "/omv" "http://localhost:8080"
+    ProxyPassReverse "/omv" "http://localhost:8080"    
+
+</VirtualHost>
+
+<VirtualHost *:8080>
+    ServerAdmin admin@example.com
+    ServerName example.com
+    ServerAlias www.example.com
+    DocumentRoot /var/www/omv/
+    ErrorLog /var/log/apache2/error.log
+    CustomLog /var/log/apache2/access.log combined
+
+
 </VirtualHost>
